@@ -34,34 +34,6 @@ name|org
 operator|.
 name|apache
 operator|.
-name|lucene
-operator|.
-name|document
-operator|.
-name|Field
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|common
-operator|.
-name|SolrDocument
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
 name|solr
 operator|.
 name|common
@@ -69,6 +41,22 @@ operator|.
 name|params
 operator|.
 name|SolrParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|handler
+operator|.
+name|component
+operator|.
+name|QueryElevationComponent
 import|;
 end_import
 
@@ -238,7 +226,9 @@ argument_list|()
 operator|.
 name|get
 argument_list|(
-literal|"BOOSTED"
+name|QueryElevationComponent
+operator|.
+name|BOOSTED
 argument_list|)
 return|;
 block|}
