@@ -62,6 +62,90 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|SolrQuery
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|impl
+operator|.
+name|BinaryResponseParser
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|impl
+operator|.
+name|HttpSolrClient
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|response
+operator|.
+name|QueryResponse
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|SolrDocument
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|common
 operator|.
 name|SolrInputDocument
@@ -115,7 +199,7 @@ import|;
 end_import
 
 begin_comment
-comment|/**  *   */
+comment|/**  *  */
 end_comment
 
 begin_class
@@ -582,6 +666,266 @@ argument_list|,
 literal|"sort"
 argument_list|,
 literal|"id desc"
+argument_list|)
+expr_stmt|;
+comment|// See SOLR-4854 for background on following test code
+comment|// Uses XML response format by default
+name|QueryResponse
+name|response
+init|=
+name|query
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"XXXX"
+argument_list|,
+literal|"qt"
+argument_list|,
+literal|"/elevate"
+argument_list|,
+literal|"shards.qt"
+argument_list|,
+literal|"/elevate"
+argument_list|,
+literal|"rows"
+argument_list|,
+literal|"500"
+argument_list|,
+name|CommonParams
+operator|.
+name|FL
+argument_list|,
+literal|"id, [elevated]"
+argument_list|,
+literal|"enableElevation"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"forceElevation"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"elevateIds"
+argument_list|,
+literal|"6"
+argument_list|,
+literal|"sort"
+argument_list|,
+literal|"id desc"
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|response
+operator|.
+name|getResults
+argument_list|()
+operator|.
+name|getNumFound
+argument_list|()
+operator|>
+literal|0
+argument_list|)
+expr_stmt|;
+name|SolrDocument
+name|document
+init|=
+name|response
+operator|.
+name|getResults
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|6.0f
+argument_list|,
+name|document
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"id"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|true
+argument_list|,
+name|document
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"[elevated]"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// Force javabin format
+name|HttpSolrClient
+name|client
+init|=
+operator|new
+name|HttpSolrClient
+argument_list|(
+operator|(
+operator|(
+name|HttpSolrClient
+operator|)
+name|clients
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|)
+operator|.
+name|getBaseURL
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|client
+operator|.
+name|setParser
+argument_list|(
+operator|new
+name|BinaryResponseParser
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|SolrQuery
+name|solrQuery
+init|=
+operator|new
+name|SolrQuery
+argument_list|(
+literal|"XXXX"
+argument_list|)
+operator|.
+name|setParam
+argument_list|(
+literal|"qt"
+argument_list|,
+literal|"/elevate"
+argument_list|)
+operator|.
+name|setParam
+argument_list|(
+literal|"shards.qt"
+argument_list|,
+literal|"/elevate"
+argument_list|)
+operator|.
+name|setRows
+argument_list|(
+literal|500
+argument_list|)
+operator|.
+name|setFields
+argument_list|(
+literal|"id,[elevated]"
+argument_list|)
+operator|.
+name|setParam
+argument_list|(
+literal|"enableElevation"
+argument_list|,
+literal|"true"
+argument_list|)
+operator|.
+name|setParam
+argument_list|(
+literal|"forceElevation"
+argument_list|,
+literal|"true"
+argument_list|)
+operator|.
+name|setParam
+argument_list|(
+literal|"elevateIds"
+argument_list|,
+literal|"6"
+argument_list|,
+literal|"wt"
+argument_list|,
+literal|"javabin"
+argument_list|)
+operator|.
+name|setSort
+argument_list|(
+literal|"id"
+argument_list|,
+name|SolrQuery
+operator|.
+name|ORDER
+operator|.
+name|desc
+argument_list|)
+decl_stmt|;
+name|setDistributedParams
+argument_list|(
+name|solrQuery
+argument_list|)
+expr_stmt|;
+name|response
+operator|=
+name|client
+operator|.
+name|query
+argument_list|(
+name|solrQuery
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|response
+operator|.
+name|getResults
+argument_list|()
+operator|.
+name|getNumFound
+argument_list|()
+operator|>
+literal|0
+argument_list|)
+expr_stmt|;
+name|document
+operator|=
+name|response
+operator|.
+name|getResults
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|6.0f
+argument_list|,
+name|document
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"id"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|true
+argument_list|,
+name|document
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"[elevated]"
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
